HighCharts Stretch Issue, Table bordered, striped, blue hover

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,3 +2,7 @@
     background-color: white !important;
     border-top : solid #3c8dbc;
 }
+
+.table-hover-blue>tbody>tr:hover {
+    background-color: #3c8dbc;
+}
